--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "dotenv": "^16.0.0",
     "tsc": "^2.0.4",
     "typescript": "^4.6.3"
+  },
+  "scripts": {
+    "upload": "yarn tsc && node dist/index.js"
   }
 }
