--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   "dependencies": {
     "@pinata/sdk": "^1.1.24",
     "chalk": "4.1.2",
+    "cli-progress": "^3.11.1",
+    "dotenv": "^16.0.0",
+    "fs-readdir-recursive": "^1.1.0",
+    "got": "v11",
     "jsonfile": "^6.1.0"
   },
   "devDependencies": {
+    "@types/fs-readdir-recursive": "^1.0.0",
     "@types/jsonfile": "^6.1.0",
     "@types/node": "^17.0.23",
-    "dotenv": "^16.0.0",
     "tsc": "^2.0.4",
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "upload": "yarn tsc && node dist/index.js"
+    "upload": "yarn tsc && node dist/indexV2.js"
   }
 }
